--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body{
 h1,h2{
 	text-align:center;
 }
-ul{
+li{
 	list-style-type:none;
 }
 a{
@@ -21,7 +21,7 @@ a{
 	
 }
 .player_one{
-	background-color: rgb(0,0,0,0); 
+	background-color: rgb(255,255,255); 
 	padding:10px; 
 	border-radius:10px;
 	width:50%;
